--- a/app/stylesheets/layout.css
+++ b/app/stylesheets/layout.css
@@ -10,23 +10,19 @@ body {
 
 #header, #footer {
   position: relative;
-  height: 30px;
+  font-size: 17px;
   display: flex;
   flex-flow: row;
-  z-index: 1; /* Allows UserMenu to go overtop of the main-bar */
+  z-index: 1;
 
-  > * {
-    margin-top: 2px;
-    margin-left: 10px;
-    margin-right: 10px;
+  > .fa {
+    margin: 3px 0px;
+    padding: 8px 10px;
+  }
 
-    &.fa {
-      margin-top: 5px;
-    }
-
-    &.btn {
-      margin-top: 0;
-    }
+  > span {
+    margin-top: 7px;
+    margin-right: 15px;
   }
 }
 
