--- a/app/stylesheets/layout.css
+++ b/app/stylesheets/layout.css
@@ -28,6 +28,16 @@ body {
   > button {
     outline: none;
     margin-right: 8px !important;
+
+    /* HACK: override bootstrap focus behavior */
+    &:focus {
+      background-color: #fff;
+      border-color: #ccc;
+    }
+    &:hover, &.active, &.active:focus {
+      background-color: #e6e6e6;
+      border-color: #adadad;
+    }
   }
 }
 
@@ -61,10 +71,15 @@ body {
   margin: 25px;
 }
 
-#main-panel.mouse-crosshair #viewer {
-  cursor: crosshair !important;
+#main-panel.mouse-crosshair {
+  cursor: not-allowed !important;
 
-  > * { /* Ignore clicks while pinging. */
+  #viewer { /* Ignore clicks while pinging. */
     pointer-events: none;
+  }
+
+  img {
+    pointer-events: auto;
+    cursor: crosshair !important;
   }
 }
