--- a/app/stylesheets/layout.css
+++ b/app/stylesheets/layout.css
@@ -68,7 +68,10 @@ body {
 }
 
 #waitingMsg {
+  width: 100%;
   margin: 25px;
+  font-size: 20px;
+  text-align: center;
 }
 
 #main-panel.mouse-crosshair {
