--- a/app/stylesheets/layout.css
+++ b/app/stylesheets/layout.css
@@ -69,7 +69,8 @@ body {
 
 #waitingMsg {
   width: 100%;
-  margin: 25px;
+  margin: 30px 0;
+  padding: 0 5px;
   font-size: 20px;
   text-align: center;
 }
